Adding Jar's and Widgets

--- a/finalProject/war/css/custom.css
+++ b/finalProject/war/css/custom.css
@@ -1,3 +1,8 @@
+.widget-wrapper, #patient-info-wrapper {
+    min-height: 200px;
+    border:solid;
+    border-width:1px; 
+}
 #username-div {
     float:right;
     margin-top: 10px;
