--- a/finalProject/war/css/custom.css
+++ b/finalProject/war/css/custom.css
@@ -1,3 +1,20 @@
+#sselect {
+    width: 80%;
+    margin-left: 0px;
+    margin-top: 20px;
+    margin-bottom: -20px;
+    height: 35px;
+    -webkit-border-radius: 10px;
+	   -moz-border-radius: 10px;
+	   border-radius: 10px;
+    clear: both !important;
+    line-height: 35px;
+    background-color:rgba(0,0,0,0.2);
+    font-weight: 900;
+    color:rgba(255,255,255,1.0);
+    
+    
+}
 #typeahead-header {
     float:left !important;
     margin-right:10px;
@@ -152,7 +169,9 @@
     font-weight: 900;
     color:rgba(255,255,255,1.0);
 }
-
+#passInputRE {
+    margin-left: 25px;
+}
 .login-btn {
     width: 100%;
     margin-top: 40px;
