--- a/finalProject/war/css/custom.css
+++ b/finalProject/war/css/custom.css
@@ -11,6 +11,13 @@
 .allergies-header {
     text-align: center;
 }
+#allergies-container {
+    min-height: 80px;
+    margin-top: -10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+	  -moz-border-radius: 10px;
+}
 #sselect {
     width: 80%;
     margin-left: 0px;
