--- a/finalProject/war/css/custom.css
+++ b/finalProject/war/css/custom.css
@@ -1,3 +1,13 @@
+.allergy-text-left {
+    float: left;
+    margin-right: 10px;
+}
+.allergy-text-right {
+    font-size: 10px;
+    margin-top:3px;
+    line-height: 20px;
+    text-align: right;
+}
 #userpic {
     max-height: 100px;
     margin-top: -10px;
@@ -18,6 +28,7 @@
     min-height: 80px;
     margin-top: -10px;
     border-radius: 10px;
+    border: solid 1px black;
     -webkit-border-radius: 10px;
 	  -moz-border-radius: 10px;
 }
