Working on parsing allergy data

--- a/finalProject/war/css/custom.css
+++ b/finalProject/war/css/custom.css
@@ -1,3 +1,9 @@
+.active-allergy-text {
+    color:#00BFB6;
+}
+.inactive-allergy-text {
+    color:#017A74;
+}
 .allergy-text-left {
     float: left;
     margin-right: 10px;
