--- a/finalProject/war/css/custom.css
+++ b/finalProject/war/css/custom.css
@@ -1,8 +1,8 @@
 .active-allergy-text {
-    color:#00BFB6;
+    color:#000000;
 }
 .inactive-allergy-text {
-    color:#017A74;
+    color:#797A7A;
     font-weight:300;
 }
 .allergy-text-left {
