--- a/finalProject/war/css/custom.css
+++ b/finalProject/war/css/custom.css
@@ -295,12 +295,12 @@
     margin-top: -30px;
 }
 
-#footer {
+.footer {
     margin-top: 50px;
     background-color:#5C85AD; 
     width:100%;
     bottom: 0;
-    position: absolute;
+    position: relative;
     margin:0; padding:0;
 }
 
